2012-07-27 Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (removeWords): Allow longer stopword lists.

2012-01-31  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readXML): Readers can now set the document language
	themselves.

2012-01-14  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (XMLSource, getElem.XMLSource): Simplifications as
	proposed by Milan Bouchet-Valat.

2012-01-11  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (termFreq): Fix processing of user provided
	stopwords. Reported by Bettina Grün.

2011-12-23  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (termFreq): Fix invalid handling of
	control$wordLengths[1]. Reported by Steven C. Bagley.

2011-12-17  Ingo Feinerer  <feinerer@logic.at>

	* DESCRIPTION (Version): Prepare for CRAN Christmas release.

2011-12-12  Ingo Feinerer  <feinerer@logic.at>

	* R/utils.R (map_IETF_Snowball): Map empty input to "porter".

2011-12-07  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (removePunctuation): Add option to preserve
	intra-word dashes.

2011-12-06  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (termFreq): Allow reordering of control option
	processing.

2011-11-17  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readPDF): Use tools:::pdf_info() instead of external
	pdfinfo tool.

	* inst/stopwords/SMART.dat: Add SMART information retrieval system
	stopwords (which are also used by the MC toolkit).

	* R/matrix (termFreq): Allow local option \code{bounds$local} to
	restrict how often a term may appear in each document (generalizes
	\code{minDocFreq}). Similarly the local option \code{wordLenghts}
	for word length bounds (generalizes \code{minWordLength}).

	* R/matrix.R (TermDocumentMatrix.VCorpus): New global option
	\code{bounds$global} for restricting how often a term is allowed
	to appear in different documents.

	* R/matrix.R (TermDocumentMatrix.VCorpus): Distinguish between
	local options delegated internally to termFreq() and global