@@ -1,3 +1,8 @@
+2012-10-03 Ingo Feinerer  <feinerer@logic.at>
+	* R.weight.R (weightTfIdf, weightSMART): Gracefully handle empty
+	columns and rows (avoids blow-up due to NaN values). Suggested by Jaap
+	Frölich.
+
 2012-07-27 Ingo Feinerer  <feinerer@logic.at>
 
 	* R/transform.R (removeWords): Allow longer stopword lists.
